[package]
name = "vbus-sync"
version = "0.1.0"
authors = [""]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-h1 = "*"
async-std = { version = "*", features = [ "attributes" ] }
color-eyre = "*"
http-types = "*"
resol-vbus = "*"
tracing = "*"
tracing-subscriber = "*"
