[package]
name = "vbus-sync"
version = "0.2.0"
authors = ["Daniel Wippermann <Daniel.Wippermann@resol.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-h1 = "*"
async-std = { version = "*", features = [ "attributes" ] }
chrono = "0.4"
chrono-tz = "0.6"
color-eyre = "*"
http-types = "*"
resol-vbus = "*"
tracing = "*"
tracing-subscriber = "*"
